# uv-init-demos

./: README.md  update-projects.sh
.github/workflows/: update.yml
uv-init-lib/: pyproject.toml
uv-init-package/: pyproject.toml
