[project]
name = "uv-init-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Demo User", email = "github-actions[bot]@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-init-package = "uv_init_package:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
